<resources>
    <string name="app_name">Balanzio</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">SignIn</string>
    <string name="label_name">Nama</string>
    <string name="title_register_page">Lengkapi data di bawah ini</string>
    <string name="label_BB">Berat Badan</string>
    <string name="label_TB">Tinggi Badan</string>
    <string name="label_Umur">Umur</string>
    <string name="label_JenisKelamin">Jenis Kelamin</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="title_login_page">Masuk</string>
    <string name="pertanyaan1">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="pertanyaan2">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="desc_regis">Masukkan datamu, untuk memulai\nperjalanan diet anda bersama Balanzio!</string>
    <string name="desc_login">Masuk untuk menikmati pengalaman\nmengelola kalori yang lebih baik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_resep">Resep</string>
    <string name="menu_target">Target</string>
    <string name="text_search">Cari makanan...</string>
    <string name="title_rv_makanan">Saran hari ini</string>
    <string name="on_boarding1">Balanzio adalah sebuah aplikasi diet yang dirancang untuk membantu pengguna mengelola pola makan mereka dengan mudah dan efektif.</string>
    <string name="onboarding_titles_1">Apa itu Balanzio?</string>
    <string name="onboarding_titles_2">Mengapa harus Balanzio?</string>
    <string name="on_boarding2">Karena di Balanzio, kamu dapat mengidentifikasi makanan dengan cepat menggunakan fitur “Scan”. Kamu juga dapat mengatur tujuan kalori harianmu sesuai dengan kebutuhan. Selain itu kamu juga dapat mencari resep makanan yang kamu inginkan.</string>
    <string name="onboarding_titles_3">Mulai perjalananmu bersama Balanzio!</string>
    <string name="on_boarding3">Ayo masuk untuk menikmati perjalanan dietmu bersama balanzio !!!</string>
    <string name="save">Simpan</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_list_food_riwayat">Makanan yang dikonsumsi</string>
    <string name="point1_detail">Baik dikonsumsi</string>
    <string name="point2_detail">Rincian Nutrisi</string>
    <string name="kalori_detail">Kalori</string>
    <string name="karbohidrat_detail">Karbohidrat</string>
    <string name="protein_detail">Protein</string>
    <string name="lemak_detail">Lemak</string>
    <string name="point3_detail">Bahan</string>
    <string name="text_karbo">Karbo</string>
    <string name="masuk_on_boarding">Masuk</string>
    <string name="text_important">*Dekatkan kamera ke makanan untuk\nhasil yang maksimal</string>
    <string name="title_resep">Resep</string>
    <string name="title_sarapan">Resep Makanan untuk Sarapan</string>
    <string name="title_makan_siang">Resep Makanan untuk Makan Siang</string>
    <string name="title_makan_malam">Resep Makanan untuk Makan Malam</string>
    <string name="tv_tanggal">5 Desember 2023</string>
    <string name="dummy_bahan_detail">1. Lorem ipsum\n2. Etiam laoreet\n3. Sed\n4. dictum\n5. inter</string>
    <string name="point4_detail">Cara pembuatan</string>
    <string name="dummy_pembuatan_detail">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. \n2. Etiam laoreet purus at dolor condimentum consequat vel quis justo. \n3. Sed at arcu dictum, euismod augue et, rhoncus diam. Nullam interdum tortor et tempus commodo. \n4. Integer fringilla nibh id magna aliquet, vel volutpat eros auctor. Sed pulvinar purus ut suscipit lacinia. Proin ullamcorper ex id velit semper, hendrerit ultrices nisi tincidunt. \n5. Vestibulum convallis justo sagittis dolor tincidunt pretium. Proin feugiat urna tempor ligula mollis varius. Sed iaculis felis eu mollis rhoncus.</string>
    <string name="favorit">Favorit</string>
    <string name="title_goals">Total kalori harianmu</string>
    <string name="preview">Pratinjau Gambar</string>
    <string name="akurasi">Akurasi</string>
</resources>